# Hands-On-Microservices-with-Rust

./: .gitignore  README.md
Chapter02/hyper-microservice/: Cargo.toml
Chapter02/hyper-microservice-rest/: Cargo.toml
Chapter02/hyper-microservice-rest-regex/: Cargo.toml  test.sh
Chapter02/hyper-microservice-rest-regex/src/: main.rs
Chapter02/hyper-microservice-rest/src/: main.rs
Chapter02/hyper-microservice-with-handlers/: Cargo.toml
Chapter02/hyper-microservice-with-handlers/src/: main.rs
Chapter02/hyper-microservice/src/: main.rs
Chapter03/random-service/: Cargo.toml
Chapter03/random-service-with-args/: Cargo.toml
Chapter03/random-service-with-args/src/: main.rs
Chapter03/random-service-with-config/: Cargo.toml
Chapter03/random-service-with-config/src/: main.rs
Chapter03/random-service-with-env/: Cargo.toml
Chapter03/random-service-with-env/src/: main.rs
Chapter03/random-service-with-logging/: Cargo.toml
Chapter03/random-service-with-logging/src/: main.rs
Chapter03/random-service/src/: main.rs
Chapter04/random-service-with-multiple-formats/: Cargo.toml  test.sh
Chapter04/random-service-with-multiple-formats/src/: main.rs
Chapter04/random-service-with-parameters/: Cargo.toml  test.sh
Chapter04/random-service-with-parameters/src/: main.rs
Chapter04/random-service-with-shuffle/: Cargo.toml
Chapter05/futures-examples/src/: main.rs
Chapter05/images-service/: Cargo.toml  test.sh
Chapter06/blocking/src/: main.rs
Chapter06/grpc-ring/: Cargo.toml  build.rs  build.sh  ring.proto  test.sh
Chapter06/grpc-ring/src/: client.rs  lib.rs  main.rs  ring.rs  ring_grpc.rs  server.rs
Chapter06/jsonrpc-ring/: Cargo.toml  first.sh  second.sh  test.sh
Chapter06/jsonrpc-ring/src/: main.rs
Chapter06/one-thread/src/: main.rs
Chapter06/thread-pool/: Cargo.toml
Chapter06/time-service/: Cargo.toml
Chapter07/sessions/: Cargo.toml  test.sh
Chapter07/sessions/src/: main.rs
Chapter07/user-location/: Cargo.toml  create-table.sh  table.json
Chapter07/user-location/src/: main.rs
Chapter07/user-logs/: Cargo.toml  test.sh
Chapter07/user-logs/src/: main.rs
Chapter07/users/: Cargo.toml  test.sh
Chapter07/users-mysql/: Cargo.toml  test.sh
Chapter07/users-mysql/src/: main.rs
Chapter07/users-pool/: Cargo.toml  users.csv
Chapter07/users-pool/src/: main.rs
Chapter08/accounts/: Cargo.toml
Chapter08/chat/: Cargo.toml
Chapter08/chat/migrations/2019-01-06-192329_create_users/: up.sql
Chapter08/chat/migrations/2019-01-06-192333_create_channels/: down.sql  up.sql
Chapter08/chat/migrations/2019-01-06-192338_create_memberships/: down.sql  up.sql
Chapter08/chat/migrations/2019-01-06-192344_create_messages/: up.sql
Chapter08/chat/src/: lib.rs  models.rs  schema.rs
Chapter08/users/: Cargo.toml  migrate.sh
Chapter08/users/migrations/2018-11-22-192300_create_tables/: up.sql
Chapter08/users/src/: main.rs  models.rs
Chapter09/assets-rocket/: Cargo.toml
Chapter09/content-rocket/: Cargo.toml  Rocket.toml  test.sh
Chapter09/emails-gotham/: Cargo.toml
Chapter09/emails-nickel/: Cargo.toml  postfix.sh  sendmail.sh  test.sh
Chapter09/logs-gotham/: Cargo.toml
Chapter09/logs-gotham/src/: main.rs
Chapter09/rocket/: Cargo.toml
Chapter09/users-rouille/: Cargo.toml  test.sh
Chapter09/users-rouille/migrations/2018-11-22-192300_create_accounts/: up.sql
Chapter09/users-rouille/src/: main.rs  schema.rs
Chapter10/actors/: Cargo.toml
Chapter10/blocking/: Cargo.toml
Chapter10/one-thread/: Cargo.toml
Chapter10/thread-pool/: Cargo.toml  test.sh
Chapter11/example-11-1-minimal/: Cargo.toml
Chapter11/example-11-2-routes/: Cargo.toml
Chapter11/example-11-3-json/: Cargo.toml
Chapter11/router/: Cargo.toml
Chapter11/router-cache/: Cargo.toml  test.sh
Chapter11/router-cache-ws/: Cargo.toml
Chapter12/rabbit-actix/: Cargo.toml  test.sh
Chapter12/rabbit-actix/src/: lib.rs  queue_actor.rs  server.rs  worker.rs
Chapter12/rabbit-actix/templates/: tasks.html
Chapter13/integration/: Cargo.toml
Chapter13/structural-logging/: Cargo.toml
Chapter13/tracing/: Cargo.toml  jaeger.sh
Chapter13/units/: Cargo.toml
Chapter13/units.orig/: Cargo.toml
Chapter14/benches/: Cargo.toml
Chapter14/fast-service/: Cargo.toml  benchmark.yml  build.rs
Chapter14/fast-service/src/: main.rs
Chapter14/fast-service/templates/: index.html
Chapter14/profiled/: Cargo.toml
Chapter15/deploy/: docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  prepare.sh
Chapter15/deploy/microservices/content/: Cargo.toml  Dockerfile  Rocket.toml
Chapter15/deploy/microservices/content/migrations/2018-11-22-192400_create_comments/: up.sql
Chapter15/deploy/microservices/content/src/: comment.rs  main.rs
Chapter15/deploy/microservices/dbsync/: Cargo.toml  Dockerfile  Dockerfile.hidden
Chapter15/deploy/microservices/dbsync/migrations/2018-11-22-192300_create_tables/: down.sql  up.sql
Chapter15/deploy/microservices/dbsync/src/: main.rs
Chapter15/deploy/microservices/mails/: Cargo.toml  Dockerfile
Chapter15/deploy/microservices/mails/src/: main.rs
Chapter16/rustci/: docker-compose.yml
Chapter17/hello-lambda/: Cargo.toml
Chapter17/minimal-lambda/: Cargo.toml  pack.sh
Chapter17/minimal-lambda/src/: main.rs
Chapter17/serverless/: .gitignore  .travis.yml  Cargo.toml  README.md  config.js  deploy.sh  load-assets.sh  package-lock.json  package.json  serverless.yml
Chapter17/serverless/lambda_1/: Cargo.toml
Chapter17/serverless/lambda_1/src/: main.rs
Chapter2/hyper-microservice/: Cargo.toml
Chapter2/hyper-microservice-rest-regex/: Cargo.toml
Chapter3/random-service-with-args/: Cargo.toml
Chapter3/random-service-with-config/: Cargo.toml  microservice.toml
Chapter3/random-service-with-env/: .env  Cargo.toml
Chapter3/random-service-with-logging/: Cargo.toml
Chapter4/random-service-with-multiple-formats/: Cargo.toml
Chapter4/random-service-with-shuffle/: test.sh
Chapter5/futures-examples/: Cargo.toml
Chapter5/images-service/: Cargo.toml
Chapter6/one-thread/: Cargo.toml
media/: SOURCES.md
(+79 files in other folders)
