[package]
name = "logs-gotham"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
gotham = "0.3"
gotham_derive = "0.3"
hyper = "0.12"
tokio = "0.1"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres" }
