[package]
name = "rabbit-actix"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
chrono = "0.4"
env_logger = "0.6"
image = "0.21"
indexmap = "1.0"
failure = "0.1"
futures = "0.1"
log = "0.4"
queens-rock = "0.1"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
uuid = "0.7"

[dependencies.lapin]
version = "0.15"
package = "lapin-futures"

[[bin]]
name = "rabbit-actix-server"
path = "src/server.rs"
test = false

[[bin]]
name = "rabbit-actix-worker"
path = "src/worker.rs"
test = false

[build-dependencies]
askama = "0.7"
