[package]
name = "mails-microservice"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]

[dependencies]
config = "0.9"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
lettre = { git = "https://github.com/lettre/lettre" }
lettre_email = { git = "https://github.com/lettre/lettre" }
nickel = "0.10"
serde = "1.0"
serde_derive = "1.0"
